--- a/package.json
+++ b/package.json
@@ -5,21 +5,48 @@
   "main": "index.js",
   "author": "fatih",
   "license": "MIT",
+  "scripts": {
+    "build:dev": "cross-env NODE_ENV=development webpack --mode development",
+    "build:prod": "cross-env NODE_ENV=production webpack --mode production",
+    "start": "webpack serve --content-base src --hot --inline --mode development"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@webpack-cli/serve": "^1.5.2",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "8.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^3.6.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "webpack": "^4.0.0",
+    "css-minimizer-webpack-plugin": "^1.3.0",
+    "eslint": "^7.22.0",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "react-hot-loader": "^4.12.12",
+    "source-map-explorer": "^2.5.2",
+    "style-loader": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "4.1.1",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-bundle-tracker": "1.1.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.0.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.0.0",
+    "webpack-merge": "^5.7.3",
+    "what-input": "^5.2.3"
   },
   "dependencies": {
-    "semantic-ui-react": "^2.0.4"
+    "autoprefixer": "9.0.0",
+    "less": "3.8.1",
+    "less-loader": "^10.0.0",
+    "mini-css-extract-plugin": "1.3.9",
+    "postcss-loader": "^6.1.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "semantic-ui-less": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "webpack": "^5.56.0"
   }
 }
