--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "author": "fatih",
   "license": "MIT",
   "scripts": {
-    "build:dev": "cross-env NODE_ENV=development webpack --mode development",
-    "build:prod": "cross-env NODE_ENV=production webpack --mode production",
-    "start": "webpack serve --content-base src --hot --inline --mode development"
+    "build": "cross-env NODE_ENV=production webpack --watch",
+    "start": "cross-env NODE_ENV=development webpack serve"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -34,13 +33,14 @@
     "webpack-bundle-tracker": "1.1.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.0.0",
-    "webpack-merge": "^5.7.3",
+    "webpack-merge": "^5.8.0",
     "what-input": "^5.2.3"
   },
   "dependencies": {
     "autoprefixer": "9.0.0",
-    "less": "3.8.1",
-    "less-loader": "^10.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "1.3.9",
     "postcss-loader": "^6.1.1",
     "react": "^16.11.0",
