Icons working, Flags not working

--- a/frontend/semantic-ui/theme.config
+++ b/frontend/semantic-ui/theme.config
@@ -89,9 +89,9 @@
          Import Theme
 *******************************/
 
-/* @import (multiple) "theme.less"; */
+@import (multiple) "theme.less";
 
-@import (multiple) "~semantic-ui-less/theme.less";
+/* @import (multiple) "~semantic-ui-less/theme.less"; */
 @fontPath : '../../../themes/@{theme}/assets/fonts';
 
 /* End Config */
